# locai

./: README.md  index.html  package-lock.json  package.json  pad_icon.py
.github/workflows/: release.yml
src/: App.css  App.tsx  global.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  diff.rs  file.rs  git.rs  http.rs  llm.rs  mod.rs  system.rs  terminal.rs
src/components/AIPanel/: AIPanel.css  AIPanel.tsx  AgentSteps.css  AgentSteps.tsx  MessageBubble.tsx  ModelSelector.tsx  SessionList.tsx
src/components/ActivityBar/: ActivityBar.css  ActivityBar.tsx  SystemToolbar.css  SystemToolbar.tsx
src/components/ApiTestPanel/: ApiTestPanel.css  ApiTestPanel.tsx
src/components/DocsPanel/: DocsPanel.css  DocsPanel.tsx
src/components/Editor/: MonacoEditor.css  MonacoEditor.tsx
src/components/FileTree/: FileTree.css  FileTree.tsx
src/components/GitPanel/: GitPanel.css  GitPanel.tsx
src/components/HistoryPanel/: HistoryPanel.css  HistoryPanel.tsx
src/components/ProjectTabs/: ProjectTabBar.css  ProjectTabBar.tsx
src/components/SearchPanel/: SearchPanel.css  SearchPanel.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Sidebar/: MCPPanel.tsx  SidebarModelPicker.css  SidebarModelPicker.tsx  SkillsPanel.tsx
src/components/Terminal/: Terminal.css  Terminal.tsx
src/lib/: file-utils.ts
src/lib/llm/: agent-loop.ts  prompts.ts  tool-executor.ts  utils.ts
src/lib/opencode/: loader.ts
src/store/: editorStore.ts
